[gd_scene load_steps=6 format=3 uid="uid://8lele60ssxo7"]

[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="1_5slcd"]
[ext_resource type="PackedScene" uid="uid://bv8sclwxx0jo2" path="res://scenes/ui/game_menu_screen_background.tscn" id="1_arotu"]
[ext_resource type="Script" uid="uid://cfwk3qqiscvh7" path="res://scenes/ui/game_menu_screen.gd" id="1_l5nq4"]
[ext_resource type="PackedScene" uid="uid://oyn5s5nvg3xl" path="res://scenes/components/mouse_cursor_component.tscn" id="2_vrg0q"]
[ext_resource type="Texture2D" uid="uid://bqt5w6lb3t7y5" path="res://assets/ui/mouse_icon.png" id="3_ecc0l"]

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_l5nq4")

[node name="MouseCursorComponent" parent="." instance=ExtResource("2_vrg0q")]
cursor_component_texture = ExtResource("3_ecc0l")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("1_arotu")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5slcd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
auto_translate_mode = 2
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 90
text = "NOME DO JOGO"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "START"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "MULTIPLAYER"

[node name="SaveGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "SAVE?"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
